--- a/src/public/js/components/Employees/EmployeeCard/EmployeeCard.scss
+++ b/src/public/js/components/Employees/EmployeeCard/EmployeeCard.scss
@@ -8,6 +8,21 @@
   min-width: 220px;
   transition: all 0.3s ease-out;
 
+  &__img {
+    height: 100%;
+    min-width: 100%;
+    left: 50%;
+    position: relative;
+    transform: translateX(-50%);
+
+    &_wrapper {
+      margin: 0 auto;
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+    }
+  }
+
   &:hover {
     transform: translate3d(1px, -5px, 0);
     box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.2);
