--- a/src/public/js/components/EmployeePage/LeftSection/LeftSection.scss
+++ b/src/public/js/components/EmployeePage/LeftSection/LeftSection.scss
@@ -1,3 +1,5 @@
+@import "~Styles/colors.scss";
+
 .left_section {
   text-align: center;
   padding: 40px;
@@ -15,7 +17,31 @@
       width: 150px;
       height: 150px;
       overflow: hidden;
+
+      &:hover {
+        .edit_link {
+          opacity: 0.6;
+        }
+      }
     }
+  }
+
+  .edit_link {
+    transition: 0.5s;
+    opacity: 0;
+    color: $color-white;
+    font-size: 35px;
+    font-weight: 600;
+    background-color: $color-black;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    width: 150px;
+    z-index: 1;
   }
 
   &__title {
