--- a/src/public/js/components/Shared/UserAvatar/UserAvatar.scss
+++ b/src/public/js/components/Shared/UserAvatar/UserAvatar.scss
@@ -7,13 +7,23 @@
   position: relative;
 
   .userAvatar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 25px;
-    width: 40px;
-    height: 40px;
     border-radius: 50%;
+    width: 41px;
+    height: 41px;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+      min-width: 100%;
+      left: 50%;
+      position: relative;
+      transform: translateX(-50%);
+    }
+
+    svg {
+      margin: 6px;
+    }
   }
 
   &:hover {
@@ -53,7 +63,7 @@
 
 .gray {
   fill: $color-input-placeholder;
-  border: 2px solid $color-input-placeholder
+  border: 2px solid $color-input-placeholder;
 }
 
 .white {
