--- a/src/public/js/components/ProfileEdit/ProfileEdit.scss
+++ b/src/public/js/components/ProfileEdit/ProfileEdit.scss
@@ -1,15 +1,15 @@
 @import "~Styles/colors.scss";
 
-$modal-width: 700px;
+$modal-width: 900px;
+$modal-height: 700px;
 $menu-width: 200px;
-$modal-width: 500px;
 
 .profile_edit {
   background-color: $color-white;
   border-radius: 2px;
   min-width: $modal-width;
   max-width: $modal-width;
-  min-height: $modal-width;
+  min-height: $modal-height;
 
   .display_section {
     flex: 1;
