Add responsive css

--- a/src/public/js/components/AllPages/AllPages.scss
+++ b/src/public/js/components/AllPages/AllPages.scss
@@ -8,6 +8,7 @@
   background: $color-black url('~Images/background.png') no-repeat;
   background-size: cover;
   font-family: Raleway-Light, sans-serif;
+  overflow-y: auto;
 
   .page {
     position: absolute;
