--- a/src/public/js/components/Employees/EmployeeCard/EmployeeCard.scss
+++ b/src/public/js/components/Employees/EmployeeCard/EmployeeCard.scss
@@ -1,10 +1,10 @@
+@import "~Styles/mixins.scss";
+
 .employee__card {
   text-align: center;
   background-color: #ffffff;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.2);
   padding: 15px;
-  margin-bottom: 30px;
-  margin-left: 35px;
   min-width: 220px;
   transition: all 0.3s ease-out;
 
