--- a/src/public/js/components/Employees/Employees.scss
+++ b/src/public/js/components/Employees/Employees.scss
@@ -2,6 +2,8 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-    margin: 120px;
+    margin-top: 40px;
+    justify-content: center;
+    gap: 30px;
   }
 }
