--- a/src/public/js/components/Shared/Header/Header.scss
+++ b/src/public/js/components/Shared/Header/Header.scss
@@ -1,11 +1,12 @@
-@import '~Styles/colors.scss';
+@import "~Styles/colors.scss";
 @import "~Styles/layers.scss";
 @import "~Styles/animations.scss";
+@import "~Styles/mixins.scss";
 
 .header {
-  -webkit-box-shadow: 0px -13px 18px 13px rgba(0,0,0,0.18);
-  -moz-box-shadow: 0px -13px 18px 13px rgba(0,0,0,0.18);
-  box-shadow: 0px -13px 18px 13px rgba(0,0,0,0.18);
+  -webkit-box-shadow: 0px -13px 18px 13px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 0px -13px 18px 13px rgba(0, 0, 0, 0.18);
+  box-shadow: 0px -13px 18px 13px rgba(0, 0, 0, 0.18);
   background-color: $color-white;
   z-index: $middle_level;
 
@@ -15,8 +16,8 @@
   }
 
   &_container {
-    max-width: 1280px;
-    min-width: 1280px;
+    margin: 0 40px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,6 +39,7 @@
       padding-left: 7px;
       letter-spacing: 1.5px;
       color: #202020;
+      @include font-size-mixin(20px);
     }
   }
 }
@@ -55,7 +57,7 @@
 
   &_selected {
     @extend .navBar_link;
-    -webkit-box-shadow: inset 0px -3px 0px 0px ;
+    -webkit-box-shadow: inset 0px -3px 0px 0px;
     -moz-box-shadow: inset 0px -3px 0px 0px $color-yellow;
     box-shadow: inset 0px -3px 0px 0px $color-yellow;
     background-color: $color-background-pressed;
@@ -69,11 +71,15 @@
       li {
         display: flex;
         font-family: Raleway-Medium, sans-serif;
-        font-size: 20px;
+        @include font-size-mixin(20px);
         text-transform: uppercase;
         letter-spacing: 1.5px;
         color: #202020;
         opacity: 0;
+
+        svg {
+          font-size: 25px;
+        }
 
         a {
           color: #202020;
