--- a/src/public/js/components/SignInPage/SignInPage.scss
+++ b/src/public/js/components/SignInPage/SignInPage.scss
@@ -1,4 +1,5 @@
 @import "~Styles/colors";
+@import "~Styles/mixins.scss";
 
 .page_container {
   font-family: Roboto-Light, sans-serif;
@@ -7,25 +8,48 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-y: auto;
 
   .page_content {
     color: $color-text-light;
     width: 100%;
     max-width: 1280px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
+    @include media-mixin(
+      (
+        flex-direction: (
+          900: column-reverse,
+        ),
+      )
+    );
 
     .left_column {
       flex: 2;
-      padding-top: 40px;
+
       display: flex;
       align-items: center;
       position: relative;
 
+      @include media-mixin(
+        (
+          margin-bottom: (
+            sm: 30px,
+          ),
+          padding-top: (
+            all: 40px,
+            900: 20px,
+            sm: 10px,
+          ),
+          display: (
+            //400: none,,
+          ),
+        )
+      );
+
       .page_message_wrapper {
-
-
         .italic {
           font-family: Raleway-Thin, sans-serif;
           font-style: italic;
@@ -35,7 +59,18 @@
 
     .right_column {
       flex: 1;
-      max-width: 350px;
+
+      @include media-mixin(
+        (
+          max-width: (
+            lg: 350px,
+            900: none,
+          ),
+          width: (
+            900: 100%,
+          ),
+        )
+      );
 
       .top_buttons {
         display: flex;
@@ -128,6 +163,3 @@
     }
   }
 }
-
-
-
