--- a/src/public/js/components/SignInPage/SignInPopup/SignInPopup.scss
+++ b/src/public/js/components/SignInPage/SignInPopup/SignInPopup.scss
@@ -1,12 +1,12 @@
 @import "~Styles/colors.scss";
+@import "~Styles/mixins.scss";
 
 $border-radius: 2px;
 
 .signInPopup {
   &_container {
     background-color: $color-white;
-    width: 600px;
-    height: 300px;
+    height: 200px;
     display: flex;
     border-radius: $border-radius;
   }
@@ -14,20 +14,21 @@ $border-radius: 2px;
   &_button {
     width: 50%;
     height: 100%;
+    min-width: 140px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: Raleway-Light, sans-serif;
     text-decoration: none;
     color: $color-black;
-    font-size: 25px;
+    @include font-size-mixin(25px);
     cursor: pointer;
     letter-spacing: 1.5px;
     transition: 0.4s ease-in-out;
 
     &:before {
       content: "";
-      box-shadow: inset 0px -3px 0px 0px #FEDC00;
+      box-shadow: inset 0px -3px 0px 0px #fedc00;
       width: 0%;
       position: absolute;
       height: 100%;
